recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:9: error: Unit does not take parameters
	carre()
             ^FourSquare:11: error: Unit does not take parameters
	carre()
             ^FourSquare:13: error: Unit does not take parameters
	carre()
             ^FourSquare:15: error: Unit does not take parameters
	carre()
             ^